--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 ktor_version=2.1.1
 kotlin_version=1.7.10
 logback_version=1.4.1
+exposed_version=0.39.2
+postgres_version=42.4.0
 kotlin.code.style=official
