--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
   db:
     image: postgres
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - .:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: test
+      POSTGRES_DB: monitoringapp
       POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - "54333:5432"
